# lgck-src

./: .gitignore  AUTHORS  BUGS  HISTORY  INSTALL  README  README.md  TODO  VERSION
.github/workflows/: linux_release.yml  windows_release.yml  windows_release_x86.yml
distro/linux/: easydoc.sh  lgck-builder.desktop  obl5edit.desktop  obl5edit.sh
distro/setup/: README.txt  manual6g.edoc  portable.txt  vla3demo258.lgckdb
distro/setup/licenses/: license.rtf  license.txt  lua-license.txt  qt-license-lgpl.txt  sdl-license.txt  sfml-license.txt
distro/setup/tutorial/: 116.lgckdb  annie.obl  ballon1.obl  diamond.obl  grass2.obl  grnalien.obl  ladder.obl  little_star.obl  moon2.obl  newtrees.obl  sparkle.obl  step3a.lgckdb  stop.obl  thisway.obl  wall_brick.obl
distro/win32/: README.txt
src/easydoc/: CMakeLists.txt  Class.cpp  Class.h  Classes.cpp  Classes.h  Database.cpp  Database.h  DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  DlgClass.cpp  DlgClass.h  DlgClass.ui  DlgDatabase.ui  DlgFunction.cpp  DlgFunction.h  DlgFunction.ui  DlgFunctions.cpp  DlgFunctions.h  DlgFunctions.ui  DlgParam.cpp  DlgParam.h  DlgParam.ui  DlgSection.cpp  DlgSection.h  DlgSection.ui  DlgSource.cpp  DlgSource.h  DlgSource.ui  DlgStep.cpp  DlgStep.h  DlgStep.ui  EdocParser.cpp  EdocParser.h  FileWrap.cpp  FileWrap.h  Functions.cpp  Functions.h  Params.cpp  Params.h  (+22 more)
src/easydoc/res/: license.txt
src/easydoc/sqlBuddy/: AutoArr2.cpp  AutoArr2.h  Field.cpp  Field.h  FileList.cpp  FileList.h  MSBData.cpp  MSBData.h  Table.cpp  Table.h  TextArray.cpp  TextArray.h  readme.txt
src/lgck-builder/: CMakeLists.txt  DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  DlgAnimation.cpp  DlgAnimation.h  DlgAnimation.ui  DlgAppSettings.cpp  DlgAppSettings.h  DlgAppSettings.ui  DlgDistributeGame.cpp  DlgDistributeGame.h  DlgDistributeGame.ui  DlgEditFrames.cpp  DlgEditFrames.h  DlgEditFrames.ui  DlgEditLevel.cpp  DlgEditLevel.h  DlgEditLevel.ui  DlgEntry.cpp  DlgEntry.h  DlgEntry.ui  DlgExportSprite.cpp  DlgExportSprite.h  DlgExportSprite.ui  DlgFrameSet.cpp  DlgFrameSet.h  DlgFrameSet.ui  DlgGame.cpp  DlgGame.h  DlgGame.ui  DlgGotoLevel.cpp  DlgGotoLevel.h  DlgGotoLevel.ui  DlgLayer.cpp  DlgLayer.h  DlgLayer.ui  DlgObject.cpp  DlgObject.h  DlgObject.ui  (+118 more)
src/lgck-builder/images/: points.obl5  signs.obl5
src/lgck-builder/res/: Tuffy_bold.fnt  classes.txt  const.txt  disclaimer  functions.txt  license.txt  manual.edoc
src/lgck-builder/res/meta/: annie.proto  deico.proto  diamond.proto  drago.proto  forcef94.proto  little_star (dead).proto  little_star (player bullet).proto  snake.obl  snake.proto  sparkle.proto  switch94.proto  wallbrick.obl  wallbrick.proto
src/lgck-builder/scripts/: common.lua  functions.lua  qtlua.lua  qtlua.lua.1  test.lua
src/lgck-builder/scripts/templates/: onfall.lua  player_bullet.lua  templates.lua  waypoint.lua
src/lgck-runtime/: clean.bat  clean.sh  cmd.txt  lgck-runtime.manifest.xml  lgck.rc  make.bat  makefile  readme.txt  res.json  setup.bat  setup.sh  version.h
src/lgck-runtime/glut/: keys.txt  main.cpp  make.json
src/lgck-runtime/qt/: lgck-runtime.pro  main.cpp  make.bat  make.json  makefile
src/lgck-runtime/sdl/: emgen.py  lgck-runtime-sdl.depends  main.cpp  make.json
src/lgck-runtime/sfml/: build.sh  lgck-runtime-sfml.depends  main.cpp  make.json
src/lgck-runtime/template/: body.html
src/obl5edit/: CMakeLists.txt  DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  DlgAlpha.cpp  DlgAlpha.h  DlgAlpha.ui  DlgGoto.cpp  DlgGoto.h  DlgGoto.ui  DlgImageSize.cpp  DlgImageSize.h  DlgImageSize.ui  DlgShortcuts.cpp  DlgShortcuts.h  DlgShortcuts.ui  FrameView.cpp  FrameView.h  OBL5File.cpp  OBL5File.h  Pixel.cpp  PixelBoxDock.cpp  PixelBoxDock.h  PixelBoxDock.ui  TODO  WFileSave.cpp  WFileSave.h  WFrameSet.cpp  WFrameSet.h  WHotKey.cpp  WHotKey.h  WPalette.cpp  WPalette.h  WPreview.cpp  WPreview.h  WPreviewDock.cpp  WPreviewDock.h  WPreviewDock.ui  WizFrameSet.cpp  WizFrameSet.h  (+20 more)
src/obl5t/: make.bat  makefile  merge.obl5  obl5t-usage.txt  test.obl5
src/shared/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Attacker.cpp  Attacker.h  Color.h  Const.cpp  Const.h  Countdown.cpp  Countdown.h  Credit.cpp  Credit.h  Credits.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  DotArray.cpp  DotArray.h  DrawList.cpp  DrawList.h  Drone.cpp  Drone.h  Extra.h  FileMem.cpp  FileMem.h  FileWrap.cpp  FileWrap.h  Folders.cpp  Folders.h  Font.cpp  Font.h  Frame.cpp  Frame.h  FrameArray.cpp  FrameArray.h  FrameSet.cpp  FrameSet.h  Game.cpp  (+68 more)
src/shared/compat/: README.asprintf  asprintf.cpp  asprintf.h
src/shared/interfaces/: IDisplayManager.h  IGraphics.cpp  IGraphics.h  IImageManager.h  IMusic.h
src/shared/qtgui/: cheat.h  qfilewrap.cpp  qthelper.cpp  qthelper.h  qtlua.cpp  qtlua.h
src/tools/: buildcount.py  chklicense.py  cmakeu.py  fixcrlf.py  gen-luaconst.py  genlua.py  getwiki.sh  luahead.sh  make.py  qrcmake.py  qtlua.py  sortx.py  syncw.sh  versionman.json  versionman.py  wizscript.py
src/tools/conf/: genlua.json  wizscript.json
src/tools/lgckutil/: license.py
src/tools/obl5t/: annie2.obl  breakbrick.obl  dead_annie.obl  main.cpp  makefile  newtrees.obl5  obl5t.pro  pngvalid.py
src/tools/qsci-test/: DlgSource.cpp  DlgSource.ui  Lexer.cpp  Lexer.h  WEdit.cpp  WEdit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsci-test.pro
src/tools/wiki/: class_counters.txt  class_debug.txt  class_display.txt  class_element.txt  class_extra.txt  class_global.txt  class_hittest.txt  class_inventory.txt  class_layer.txt  class_proto.txt  class_sprite.txt  lua_binding.txt  lua_functions.txt  man.html
src/tools/wizscript/: __template__.lua  abc.lua  addToScore.lua  addToScore.sample.lua  add_sprite.lua  add_sprite.sample.lua  breakable.sample.lua  callGameEvent.sample.lua  changeTo.lua  changeTo.sample.lua  counters_get.sample.lua  counters_set.sample.lua  drawRect.lua  drawRect.sample.lua  drawText.lua  drawText.sample.lua  frameSet_getSize.lua  frameSet_getSize.sample.lua  getScreenSize.sample.lua  getVar.sample.lua  killSprite.sample.lua  playMusic.sample.lua  playSound.lua  setBkColor.lua  (+19 more)
(+41 files in other folders)
